--- a/index.html
+++ b/index.html
@@ -54,390 +54,5 @@
     .progress-bar {
       margin-top: .5em;
       margin-bottom: 1.3em;
-      height: 6px;
-      background: #eee;
-      border-radius: 3px;
-      overflow: hidden;
-    }
-    #progressInner {
-      height: 100%;
-      background: #43a047;
-      width: 0%;
-      transition: width 0.4s;
-    }
-    .question {
-      font-size: 1.13em;
-      margin-bottom: 0.9em;
-      min-height: 48px;
-    }
-    .options {
-      margin-bottom: 0.8em;
-    }
-    .options button {
-      display: block;
-      width: 100%;
-      margin-bottom: 0.7em;
-      padding: 0.7em;
-      font-size: 1em;
-      background: #2196f3;
-      color: #fff;
-      border: none;
-      border-radius: 9px;
-      cursor: pointer;
-      transition: background 0.18s, transform 0.18s;
-      text-align: left;
-    }
-    .options button:hover:not(:disabled) {
-      background: #1976d2;
-      transform: translateY(-2px) scale(1.03);
-    }
-    .options button.correct {
-      background: #43a047 !important;
-      color: #fff;
-      animation: correctPop .19s;
-    }
-    .options button.incorrect {
-      background: #e53935 !important;
-      color: #fff;
-      animation: incorrectShake .25s;
-    }
-    @keyframes correctPop {
-      0% { transform: scale(1); }
-      60% { transform: scale(1.08); }
-      100% { transform: scale(1); }
-    }
-    @keyframes incorrectShake {
-      0% { transform: translateX(0); }
-      30% { transform: translateX(-5px);}
-      60% { transform: translateX(5px);}
-      100% { transform: translateX(0);}
-    }
-    .result {
-      font-size: 1.08em;
-      margin-top: 0.6em;
-      min-height: 28px;
-    }
-    .explanation {
-      font-size: 0.96em;
-      color: #555;
-      margin-top: 0.15em;
-    }
-    .start-btn, .restart-btn {
-      background: #43a047;
-      color: #fff;
-      border: none;
-      padding: 0.7em 2.1em;
-      border-radius: 8px;
-      font-size: 1em;
-      cursor: pointer;
-      margin-top: 2em;
-      margin-bottom: 0.5em;
-      transition: background 0.18s;
-    }
-    .start-btn:hover, .restart-btn:hover {
-      background: #2e7031;
-    }
-    .summary-list {
-      margin-top: 1.5em;
-      padding-left: 0;
-      list-style: none;
-      font-size: 0.99em;
-    }
-    .summary-list li {
-      margin-bottom: 1em;
-      background: #f7f7f7;
-      border-radius: 7px;
-      padding: 0.8em;
-      border-left: 5px solid #43a047;
-    }
-    .summary-list .incorrect {
-      border-left-color: #e53935;
-      background: #fbeaea;
-    }
-    .score {
-      font-size: 1.21em;
-      margin-bottom: 1.2em;
-      color: #333;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-<div class="container">
-  <h1>AI Knowledge Quiz Game</h1>
-  <div id="intro">
-    <p>Welcome to the AI Knowledge Quiz! Test your knowledge about Artificial Intelligence.<br>
-      <small>Questions are randomized each time. Some are multiple choice, some are true/false!</small>
-    </p>
-    <button class="start-btn" onclick="startQuiz()">Start Quiz</button>
-  </div>
-  <div id="quiz" style="display:none;">
-    <div class="timer-bar"><div id="timerBarInner"></div></div>
-    <div class="timer-display" id="timerDisplay" style="display:none;">Time: 30s</div>
-    <div class="progress-bar"><div id="progressInner"></div></div>
-    <div class="question" id="questionText"></div>
-    <div class="options" id="options"></div>
-    <div class="result" id="result"></div>
-    <div class="explanation" id="explanation"></div>
-  </div>
-  <div id="outro" style="display:none;">
-    <h2>Quiz Finished!</h2>
-    <div class="score" id="finalScore"></div>
-    <ul class="summary-list" id="summaryList"></ul>
-    <button class="restart-btn" onclick="restartQuiz()">Restart</button>
-  </div>
-</div>
-
-<script>
-const questions = [
-  {
-    type: "multiple",
-    question: "What does AI stand for?",
-    options: ["Artificial Intelligence", "Automated Input", "Algorithmic Interface", "Advanced Integration"],
-    answer: 0,
-    explanation: "AI stands for Artificial Intelligence."
-  },
-  {
-    type: "multiple",
-    question: "Which of these is an example of an AI application?",
-    options: ["Spam Email Filtering", "Word Processing", "File Compression", "Disk Cleanup"],
-    answer: 0,
-    explanation: "Spam filters use machine learning, a type of AI, to detect unwanted emails."
-  },
-  {
-    type: "truefalse",
-    question: "AI can learn without any data.",
-    answer: false,
-    explanation: "AI needs data to learn patterns and make predictions."
-  },
-  {
-    type: "multiple",
-    question: "Who is considered the father of AI?",
-    options: ["Alan Turing", "Bill Gates", "Elon Musk", "Ada Lovelace"],
-    answer: 0,
-    explanation: "Alan Turing's work laid the foundations for artificial intelligence."
-  },
-  {
-    type: "truefalse",
-    question: "Machine Learning is a subset of AI.",
-    answer: true,
-    explanation: "Machine Learning is a branch of AI focused on data-driven learning."
-  },
-  {
-    type: "multiple",
-    question: "Which language is commonly used for AI development?",
-    options: ["Python", "HTML", "CSS", "SQL"],
-    answer: 0,
-    explanation: "Python is popular for AI due to its libraries and community."
-  }
-];
-
-// Config
-const timeLimit = 20; // seconds per question
-
-// State
-let quizQuestions = [];
-let currentQuestion = 0;
-let score = 0;
-let timeLeft = timeLimit;
-let timerInterval = null;
-let summary = [];
-
-function shuffle(array) {
-  let m = array.length, t, i;
-  while (m) {
-    i = Math.floor(Math.random() * m--);
-    t = array[m]; array[m] = array[i]; array[i] = t;
-  }
-  return array;
-}
-
-function startQuiz() {
-  document.getElementById('intro').style.display = 'none';
-  document.getElementById('outro').style.display = 'none';
-  document.getElementById('quiz').style.display = '';
-  quizQuestions = shuffle([...questions]);
-  currentQuestion = 0;
-  score = 0;
-  summary = [];
-  loadQuestion();
-}
-
-function loadQuestion() {
-  if (currentQuestion >= quizQuestions.length) {
-    endQuiz();
-    return;
-  }
-  // Progress bar
-  document.getElementById('progressInner').style.width =
-    ((currentQuestion) / quizQuestions.length) * 100 + '%';
-
-  const q = quizQuestions[currentQuestion];
-  document.getElementById('questionText').textContent = q.question;
-  document.getElementById('explanation').textContent = '';
-  document.getElementById('result').textContent = '';
-  // Timer
-  startTimer();
-  // Options
-  const optionsDiv = document.getElementById('options');
-  optionsDiv.innerHTML = '';
-  if (q.type === "multiple") {
-    q.options.forEach((opt, idx) => {
-      const btn = document.createElement('button');
-      btn.textContent = opt;
-      btn.onclick = () => checkAnswer(idx);
-      optionsDiv.appendChild(btn);
-    });
-  } else if (q.type === "truefalse") {
-    ["True", "False"].forEach((label, idx) => {
-      const btn = document.createElement('button');
-      btn.textContent = label;
-      btn.onclick = () => checkAnswer(idx === 0); // true for "True", false for "False"
-      optionsDiv.appendChild(btn);
-    });
-  }
-}
-
-function checkAnswer(selected) {
-  clearInterval(timerInterval);
-  document.getElementById('timerDisplay').style.display = 'none';
-
-  const q = quizQuestions[currentQuestion];
-  let isCorrect = false;
-  if (q.type === "multiple") {
-    isCorrect = (selected === q.answer);
-  } else if (q.type === "truefalse") {
-    isCorrect = (selected === q.answer);
-  }
-
-  // Feedback
-  const buttons = document.querySelectorAll('#options button');
-  buttons.forEach((btn, idx) => {
-    btn.disabled = true;
-    if (q.type === "multiple") {
-      if (idx === q.answer) btn.classList.add('correct');
-      if (idx === selected && !isCorrect) btn.classList.add('incorrect');
-    } else {
-      if ((idx === 0 && q.answer === true) || (idx === 1 && q.answer === false)) btn.classList.add('correct');
-      if (idx === (selected ? 0 : 1) && !isCorrect) btn.classList.add('incorrect');
-    }
-  });
-
-  document.getElementById('result').textContent = isCorrect ? "✅ Correct!" : "❌ Wrong!";
-  document.getElementById('explanation').textContent = q.explanation || '';
-  if (isCorrect) score++;
-
-  // Save for summary
-  summary.push({
-    question: q.question,
-    userAnswer: selected,
-    correct: isCorrect,
-    correctAnswer: q.type === "multiple" ? q.options[q.answer] : (q.answer ? "True" : "False"),
-    explanation: q.explanation,
-    options: q.options || ["True", "False"]
-  });
-
-  setTimeout(() => {
-    currentQuestion++;
-    loadQuestion();
-  }, 1700);
-}
-
-function startTimer() {
-  timeLeft = timeLimit;
-  updateTimerDisplay();
-  const timerDiv = document.getElementById('timerDisplay');
-  timerDiv.style.display = 'inline-block';
-  timerDiv.classList.remove('timer-warning');
-  document.getElementById('timerBarInner').style.width = '100%';
-  clearInterval(timerInterval);
-
-  timerInterval = setInterval(() => {
-    timeLeft--;
-    updateTimerDisplay();
-    if (timeLeft <= 7) {
-      timerDiv.classList.add('timer-warning');
-    }
-    // Timer bar animation
-    document.getElementById('timerBarInner').style.width =
-      (timeLeft / timeLimit * 100) + '%';
-
-    if (timeLeft <= 0) {
-      clearInterval(timerInterval);
-      timerDiv.style.display = 'none';
-      document.getElementById('result').textContent = "⏰ Time's up!";
-      document.getElementById('explanation').textContent =
-        quizQuestions[currentQuestion].explanation || '';
-      // Lock buttons
-      const buttons = document.querySelectorAll('#options button');
-      buttons.forEach((btn, idx) => {
-        btn.disabled = true;
-        const q = quizQuestions[currentQuestion];
-        if (q.type === "multiple" && idx === q.answer) btn.classList.add('correct');
-        if (q.type === "truefalse" && (
-          (idx === 0 && q.answer === true) ||
-          (idx === 1 && q.answer === false)
-        )) btn.classList.add('correct');
-      });
-
-      summary.push({
-        question: quizQuestions[currentQuestion].question,
-        userAnswer: null,
-        correct: false,
-        correctAnswer: quizQuestions[currentQuestion].type === "multiple"
-          ? quizQuestions[currentQuestion].options[quizQuestions[currentQuestion].answer]
-          : (quizQuestions[currentQuestion].answer ? "True" : "False"),
-        explanation: quizQuestions[currentQuestion].explanation,
-        options: quizQuestions[currentQuestion].options || ["True", "False"]
-      });
-
-      setTimeout(() => {
-        currentQuestion++;
-        loadQuestion();
-      }, 1700);
-    }
-  }, 1000);
-}
-
-function updateTimerDisplay() {
-  document.getElementById('timerDisplay').textContent = `Time: ${timeLeft}s`;
-}
-
-function endQuiz() {
-  document.getElementById('quiz').style.display = 'none';
-  document.getElementById('outro').style.display = '';
-  document.getElementById('progressInner').style.width = '100%';
-  document.getElementById('finalScore').textContent =
-    `You scored ${score} out of ${quizQuestions.length}!`;
-  renderSummary();
-}
-
-function renderSummary() {
-  const list = document.getElementById('summaryList');
-  list.innerHTML = '';
-  summary.forEach((res, idx) => {
-    const li = document.createElement('li');
-    li.className = res.correct ? '' : 'incorrect';
-    li.innerHTML = `<b>Q${idx+1}:</b> ${res.question}<br>
-      <b>Your answer:</b> ${
-        res.userAnswer === null
-          ? '<span style="color:#e53935;">No answer</span>'
-          : (res.options
-            ? ((typeof res.userAnswer === 'number')
-                ? res.options[res.userAnswer]
-                : (res.userAnswer ? "True" : "False"))
-            : (res.userAnswer ? "True" : "False"))
-      }<br>
-      <b>Correct answer:</b> ${res.correctAnswer}
-      ${res.explanation ? `<br><span style="color:#555;">${res.explanation}</span>` : ''}
-    `;
-    list.appendChild(li);
-  });
-}
-
-function restartQuiz() {
-  startQuiz();
-}
-</script>
-</body>
-</html>
+      height
+
